# learning-gtest-gmock

./: .gitignore  CMakeLists.txt  README.md
gmock/: CMakeLists.txt
gmock/01_basico/: CMakeLists.txt
gmock/01_basico/01_configuracao_setup/: CMakeLists.txt
gmock/examples_case/: CMakeLists.txt
gmock/examples_case/employeeManager/: CMakeLists.txt
gmock/examples_case/employeeManager/include/: EmployeeManager.hpp  IDatabaseConnection.hpp
gmock/examples_case/employeeManager/src/: EmployeeManager.cpp  IDatabaseConnection.cpp
gmock/examples_case/employeeManager/tests/: testRunner.cpp
gtest/: CMakeLists.txt
gtest/01_basico/: CMakeLists.txt
gtest/01_basico/01_configuracao_setup/: CMakeLists.txt
gtest/01_basico/01_configuracao_setup/tests/: hello_test.cpp
gtest/01_basico/02_assertions_basicos/: CMakeLists.txt
gtest/01_basico/02_assertions_basicos/include/: assertion.hpp  string_handle.hpp
gtest/01_basico/02_assertions_basicos/src/: assertion.cpp  string_handle.cpp
gtest/01_basico/02_assertions_basicos/tests/: assertion_test.cpp  string_handle_test.cpp
gtest/02_intermediario/: CMakeLists.txt
gtest/02_intermediario/01_assertions_avancadas/: CMakeLists.txt
gtest/02_intermediario/01_assertions_avancadas/include/: assertion_exception.hpp
gtest/02_intermediario/01_assertions_avancadas/src/: assertion_exception.cpp
gtest/02_intermediario/01_assertions_avancadas/tests/: assertion_exception_test.cpp
gtest/02_intermediario/02_test_fixtures/: CMakeLists.txt
gtest/02_intermediario/02_test_fixtures/include/: Account.hpp
gtest/02_intermediario/02_test_fixtures/src/: Account.cpp
gtest/02_intermediario/02_test_fixtures/tests/: Account_fixture_test.cpp  Account_no_fixture_test.cpp
gtest/02_intermediario/03_parametrized_tests/: CMakeLists.txt
gtest/02_intermediario/03_parametrized_tests/include/: Validator.hpp
gtest/02_intermediario/03_parametrized_tests/src/: Validator.cpp
gtest/02_intermediario/03_parametrized_tests/tests/: Validator_test.cpp
gtest/examples_cases/: CMakeLists.txt
gtest/examples_cases/bank/: CMakeLists.txt  main.cpp
gtest/examples_cases/bank/include/: BankAccount.hpp
gtest/examples_cases/bank/src/: BankAccount.cpp
gtest/examples_cases/bank/tests/: bank_test.cpp
